--- a/d07/ex02/Makefile
+++ b/d07/ex02/Makefile
@@ -6,29 +6,33 @@
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/02/19 13:09:03 by bdekonin      #+#    #+#                  #
-#    Updated: 2021/02/19 13:55:30 by bdekonin      ########   odam.nl          #
+#    Updated: 2021/05/11 17:46:05 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 
+SRC		= main.cpp
 
-SRC = main.cpp
-NAME = a.out
+# output file
+NAME	= a.out
 
 # do not touch
-FLAGS = -Wall -Werror -Wextra
-GCC = clang++
-OFILES = $(SRC:.cpp=.o)
+CFLAGS	= -Wall -Werror -Wextra
+CC		= clang++
+OBJ		= $(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(SRC)
-	$(GCC) -o $(NAME) $(FLAGS) $(SRC)
+	$(CC) -o $(NAME) $(CFLAGS) $(SRC)
+
+%.o: %.cpp
+	$(CC) -o $@ -c  $< $(CFLAGS)
 
 clean:
-	rm $(NAME)
+	/bin/rm $(NAME)
 
 fclean:
-	rm $(NAME)
+	/bin/rm $(NAME)
 
 re: fclean all
