--- a/d00/ex01/Makefile
+++ b/d00/ex01/Makefile
@@ -5,33 +5,36 @@
 #                                                      +:+                     #
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
-#    Created: 2020/07/30 20:10:30 by bdekonin      #+#    #+#                  #
-#    Updated: 2020/07/31 14:24:03 by bdekonin      ########   odam.nl          #
+#    Created: 2020/07/27 10:34:22 by bdekonin      #+#    #+#                  #
+#    Updated: 2021/12/03 12:06:56 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = phonebook
+NAME		=	phonebook
 
-SRCS = addContacts.cpp main.cpp showContacts.cpp
-OFILES = $(SRCS:.cpp=.o)
+CC			=	clang++
+SRCS		=	main.cpp
+OFILES		=	$(SRCS:.cpp=.o)
+INCLUDES	=	includes
 
-FLAGS = -std=c++98 -Wall -Werror -Wextra
+FLAGS		=	-std=c++98 -Wall -Werror -Wextra
+RM			=	rm -rf
 
-all: $(NAME)
+all:		$(NAME)
 
-$(NAME): $(OFILES)
-	@clang++ $(OFILES) -o $@
+$(NAME): $(OFILES) $(HDRS)
+	$(CC) $(OFILES) -o $@
 
-%.o: %.cpp
-	clang++ $(FLAGS) -o $@ -c $<
+%.o: %.cpp %.hpp
+	$(CXX) $(FLAGS) -o $@ -c $<
 
 clean:
-	@rm -f $(OFILES)
-	@echo "Removed $(OFILES)"
+	rm -f $(OFILES)
+	echo "Removed $(OFILES)"
 
 fclean: clean
-	@rm -f $(NAME)
-	@echo "[INFO] Removed $(NAME)"
+	rm -f $(NAME)
+	echo "[INFO] Removed $(NAME)"
 
 re: fclean all
 
