--- a/d01/ex06/Makefile
+++ b/d01/ex06/Makefile
@@ -6,12 +6,12 @@
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/12/03 13:05:29 by bdekonin      #+#    #+#                  #
-#    Updated: 2021/12/03 14:49:42 by bdekonin      ########   odam.nl          #
+#    Updated: 2021/12/03 15:12:30 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 
-NAME = a.out
+NAME = karenFilter
 
 INC = Zombie.hpp
 
