--- a/d01/ex05/Makefile
+++ b/d01/ex05/Makefile
@@ -6,14 +6,14 @@
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/12/03 13:05:29 by bdekonin      #+#    #+#                  #
-#    Updated: 2021/12/03 14:49:42 by bdekonin      ########   odam.nl          #
+#    Updated: 2021/12/03 16:33:53 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 
 NAME = a.out
 
-INC = Zombie.hpp
+INC = Karen.hpp
 
 SRCS = 	Karen.cpp main.cpp
 
