--- a/d03/.vscode/settings.json
+++ b/d03/.vscode/settings.json
@@ -26,6 +26,41 @@
 		"utility": "cpp",
 		"vector": "cpp",
 		"__locale": "cpp",
-		"ios": "cpp"
+		"ios": "cpp",
+		"__config": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__functional_base": "cpp",
+		"__nullptr": "cpp",
+		"__split_buffer": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"algorithm": "cpp",
+		"array": "cpp",
+		"bit": "cpp",
+		"bitset": "cpp",
+		"cctype": "cpp",
+		"chrono": "cpp",
+		"cmath": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"exception": "cpp",
+		"initializer_list": "cpp",
+		"iosfwd": "cpp",
+		"limits": "cpp",
+		"locale": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"ratio": "cpp",
+		"stdexcept": "cpp",
+		"type_traits": "cpp",
+		"typeinfo": "cpp"
 	}
 }
