--- a/d04/.vscode/settings.json
+++ b/d04/.vscode/settings.json
@@ -21,7 +21,6 @@
 		"bitset": "cpp",
 		"cctype": "cpp",
 		"chrono": "cpp",
-		"clocale": "cpp",
 		"cmath": "cpp",
 		"complex": "cpp",
 		"cstdarg": "cpp",
@@ -60,19 +59,6 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp",
-		"compare": "cpp",
-		"concepts": "cpp",
-		"condition_variable": "cpp",
-		"deque": "cpp",
-		"numbers": "cpp",
-		"numeric": "cpp",
-		"queue": "cpp",
-		"random": "cpp",
-		"semaphore": "cpp",
-		"thread": "cpp",
-		"*.tcc": "cpp",
-		"memory_resource": "cpp",
-		"stop_token": "cpp"
+		"vector": "cpp"
 	}
 }
