--- a/d00/ex01/Makefile
+++ b/d00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2020/07/27 10:34:22 by bdekonin      #+#    #+#                  #
-#    Updated: 2021/12/03 12:06:56 by bdekonin      ########   odam.nl          #
+#    Updated: 2022/02/22 12:25:17 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,15 +26,13 @@ $(NAME): $(OFILES) $(HDRS)
 	$(CC) $(OFILES) -o $@
 
 %.o: %.cpp %.hpp
-	$(CXX) $(FLAGS) -o $@ -c $<
+	$(CC) $(FLAGS) -o $@ -c $<
 
 clean:
 	rm -f $(OFILES)
-	echo "Removed $(OFILES)"
 
 fclean: clean
 	rm -f $(NAME)
-	echo "[INFO] Removed $(NAME)"
 
 re: fclean all
 
