--- a/d06/.vscode/launch.json
+++ b/d06/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"request": "launch",
 			"name": "Debug",
 			"program": "${workspaceFolder}/ex00/a.out",
-			"args": ["42.0f"],
+			"args": ["'*'"],
 			"cwd": "${workspaceFolder}"
 		}
 	]
