--- a/d05/ex02/Makefile
+++ b/d05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: bdekonin <bdekonin@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/12/04 10:41:38 by bdekonin      #+#    #+#                  #
-#    Updated: 2022/03/08 16:09:06 by bdekonin      ########   odam.nl          #
+#    Updated: 2022/03/23 17:58:14 by bdekonin      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,11 +14,11 @@ NAME = a.out
 
 INC = 
 
-SRCS = 	main.cpp Bureaucrat.cpp Form.cpp
+SRCS = 	main.cpp Bureaucrat.cpp Form.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow -g
 
 all : $(NAME) 
 
